<resources>
    <string name="app_name">CST131</string>
    <string name="toolbarName">DnD 5e Character Creator</string>
    <string name="btnCreateCharacter">Create Character</string>
    <string name="btnRandomCharacter">Randomly Make a Character</string>
    <string name="btnViewCharacters">View Characters</string>
    <string name="toolbarCharacterCreationMenu">Character Creation Options</string>
    <string name="btnScratch">Create a Character \nFrom Scratch</string>
    <string name="btnParams">Create a Character \nUsing Parameters</string>
    <string name="tabRace">Race</string>
    <string name="tabClass">Class</string>
    <string name="tabBackground">Background</string>
    <string name="tabEquipment">Equip</string>
    <string name="tabAbilityRolls">Scores</string>
    <string name="headerRace">Races</string>
    <string name="subRaces">Sub Races</string>
    <string name="headerRacialTraits">Racial Traits</string>
    <string name="hitDie">Hit Die:</string>
    <string name="profPlus">Proficiency Plus:</string>
    <string name="weaponsORarmour">Proficiency in \n Weapons/Armour:</string>
    <string name="savingThrow">Proficiency Saving Throw:</string>
    <string name="skills">Skills:</string>
    <string name="skillsNum">Number of Skills:</string>
    <string name="tools">Tools:</string>
    <string name="characterInfo">Character Information</string>
    <string name="gender">Gender</string>
    <string name="alignment">Alignment</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="title">Title</string>
    <string name="height">Height (ft. | in.)</string>
    <string name="ft">ft.</string>
    <string name="in">in.</string>
    <string name="coin">Coins</string>
    <string name="equip">Equipment</string>
    <string name="select">Select One</string>
    <string name="userBackGround">Please enter a background for your Character</string>
    <string name="included">You get the items below with the class</string>
    <string name="abilityScores">Ability Scores</string>
    <string name="str">Strength</string>
    <string name="dex">Dexterity</string>
    <string name="con">Constitution</string>
    <string name="intel">Intelligence</string>
    <string name="wis">Wisdom</string>
    <string name="chari">Charisma</string>
    <string name="roll">Roll</string>
    <string name="roll5">Roll All</string>
    <string name="value">0</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="classer">Class</string>
    <string name="races">Race</string>
    <string name="viewPDF">Create PDF this Character</string>
    <string name="viewChar">View Characters</string>

    <string-array name="genderOptions">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="alignment">
        <item>Lawful Good (LG)</item>
        <item>Neutral Good (NG)</item>
        <item>Chaotic Good (CG)</item>
        <item>Lawful Neutral (LN)</item>
        <item>Neutral (N)</item>
        <item>Chaotic Neutral (CN)</item>
        <item>Lawful Evil (LE)</item>
        <item>Neutral Evil (NE)</item>
        <item>Chaotic Evil (CE)</item>
    </string-array>
</resources>