<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivImgBackground5"
        android:layout_width="413dp"
        android:layout_height="731dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/card_background" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/abilityScores"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRollAll"
        android:layout_width="106dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:text="@string/roll5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/str"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRollAll" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/dex"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/con"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/intel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/wis"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/chari"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/btnRollStr"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/roll"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btnRollAll" />

    <Button
        android:id="@+id/btnRollDex"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/roll"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/btnRollStr" />

    <Button
        android:id="@+id/btnRollCon"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/roll"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/btnRollDex" />

    <Button
        android:id="@+id/btnRollIntel"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/roll"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/btnRollCon" />

    <Button
        android:id="@+id/btnRollChari"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/roll"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivImgBackground5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/btnRollWis"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/btnRollWis"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/roll"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/btnRollIntel" />

    <TextView
        android:id="@+id/tvDexVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/value"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toEndOf="@+id/btnRollDex"
        app:layout_constraintTop_toBottomOf="@+id/tvStrVal" />

    <TextView
        android:id="@+id/tvCharVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/value"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toEndOf="@+id/btnRollChari"
        app:layout_constraintTop_toBottomOf="@+id/tvWisVal"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/tvConStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/value"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toEndOf="@+id/btnRollCon"
        app:layout_constraintTop_toBottomOf="@+id/tvDexVal" />

    <TextView
        android:id="@+id/tvIntVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/value"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toEndOf="@+id/btnRollIntel"
        app:layout_constraintTop_toBottomOf="@+id/tvConStr" />

    <TextView
        android:id="@+id/tvWisVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/value"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/ivImgBackground5"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/btnRollWis"
        app:layout_constraintTop_toBottomOf="@+id/tvIntVal" />

    <TextView
        android:id="@+id/tvStrVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dnd_font"
        android:text="@string/value"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/btnRollStr"
        app:layout_constraintTop_toBottomOf="@+id/btnRollAll" />

</androidx.constraintlayout.widget.ConstraintLayout>